Added publish configs

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "easy",
     "fast"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Christoffer Hansen",
   "license": "ISC",
   "bugs": {
